# app/internal/controller/http/v1/transfer.go
@@ -11,21 +11,20 @@ import (
 	"go.uber.org/zap"
 )
 
-// dungeon
-
 // TransferBalance
 // @Summary      Transfer money between users
 // @Description  Transfer money from one balance to another
 // @Tags         balance
 // @Accept       json
 // @Produce      json
-// @Param        input body 	dto.TransferBalanceIN false "to, from, amount and description"
+// @Param        input body 	dto.TransferBalanceIN  true "To and From ID, Amount and Description"
 // @Success      200  {object}  dto.TransferBalanceOUT
-// @Failure      406  {object}  dto.Error
+// @Failure      422  {object}  dto.Error
 // @Failure      500  {object}  dto.Error
 // @Router       /transfer [put]
 func (h *handler) TransferBalance(w http.ResponseWriter, r *http.Request) {
 	var transfer dto.TransferBalanceIN
+
 	// decode body
 	defer r.Body.Close() // ignore error
 	if err := json.NewDecoder(r.Body).Decode(&transfer); err != nil {
@@ -33,16 +32,18 @@ func (h *handler) TransferBalance(w http.ResponseWriter, r *http.Request) {
 
 		return
 	}
+
 	// validate struct
 	if err := transfer.Validate(); err != nil {
 		dto.JSONError(w, http.StatusBadRequest, err)
 
 		return
 	}
-	//
-	ctx, cancel := context.WithTimeout(context.Background(), h.timeout)
+
+	// // call service
+	ctx, cancel := context.WithTimeout(r.Context(), h.timeout)
 	defer cancel()
-	// call service
+
 	err := h.balanceService.Transfer(ctx, transfer.FromID, transfer.ToID, transfer.Amount, transfer.Description)
 	if err != nil {
 		if internal, ok := errors.ToInternal(err); ok {
@@ -53,15 +54,16 @@ func (h *handler) TransferBalance(w http.ResponseWriter, r *http.Request) {
 			)
 			dto.JSONError(w, http.StatusInternalServerError, internal)
 		} else {
-			dto.JSONError(w, http.StatusNotAcceptable, err)
+			dto.JSONError(w, http.StatusUnprocessableEntity, err)
 		}
 
 		return
 	}
+
 	// encode response
 	err = dto.JSONResponse(w, dto.TransferBalanceOUT{Ok: true})
-	//
 	if err != nil {
 		h.logger.Error("/transfer: encode response", zap.Error(err))
+		dto.JSONError(w, http.StatusInternalServerError, err)
 	}
 }
